--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,9 @@ jobs:
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+    - name: Install GCC
+      run: sudo apt-get update && sudo apt-get install -y gcc
+
     - name: Build
       run: cargo build --verbose
 
@@ -37,3 +40,16 @@ jobs:
 
     - name: Run format check
       run: cargo fmt --all --check
+
+    - name: Create bin directory
+      run: mkdir -p bin
+
+    - name: Run inline integration tests
+      run: |
+        chmod +x ./test_inline.sh
+        ./test_inline.sh
+
+    - name: Run function integration tests
+      run: |
+        chmod +x ./test_func.sh
+        ./test_func.sh
